--- a/_posts/2016-06-27-mathjax.md
+++ b/_posts/2016-06-27-mathjax.md
@@ -11,10 +11,11 @@ published: true
 
 $x$ 
 
+<div>
 $$
 K(a,b) = \int \mathcal{D}x(t) \exp(2\pi i S[x]/\hbar)
 $$
-
+</div>
 
 Integrating MathJax with Jekyll is a very convenient way of typesetting mathematics in a blog hosted on github pages. There are a few guides online, which were (almost) helpful in acheiving this on a github hosted site. The steps, as of September 2016, are:
 
